remove side border fromm rooter to avoid display gap.

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
   padding-right: min(24px, 8%); */
   text-align: center;
   border-top: transparent;
-  border-left: 0.1px solid var(--gray100);
-  border-right: 0.1px solid var(--gray100);
+  /* border-left: 0.1px solid var(--gray100);
+  border-right: 0.1px solid var(--gray100); */
 }
 
 .logo {
